--- a/aws-cfn-lambda-node-pipeline.yml
+++ b/aws-cfn-lambda-node-pipeline.yml
@@ -49,73 +49,19 @@ Parameters:
       - 'PROD'
       - 'QA'
       - 'TEST'
+      - 'DEV'
   # Application Name (used in stack / resource names, tags)
     pApplicationName:
     Type: 'String'
     Description: "The name of the application"
 
 Resources:
+# The following sections define the various AWS resources,
+# and their specific configurations, created by this template
 
-  # AWS S3 Bucket configuration
-  # This bucket will be used to hold the pipeline artifacts
-  rPipelineBucket:
-    Type: "AWS::S3::Bucket"
-    Properties:
-      BucketName: !Ref pPipelineBucketName
-      Tags:
-        - Key: CFNOwner
-          Value: !Ref pCFNOwnerTag
-        - Key: ENV
-          Value: !Ref pEnv
-        - Key: AppName
-          Value: !Ref pApplicationName
-
-  # AWS CodePipeline Configuration
-  rPipeline:
-    Type: "AWS::CodePipeline::Pipeline"
-    Properties:
-      Name: !Sub '${AWS::StackName}-PIPELINE-${pEnv}'
-      RoleArn: !GetAtt rPipelineRole.Arn
-      ArtifactStore:
-        Type: S3
-        Location:
-          Ref: rPipelineBucket
-      Stages:
-        - Name: Source
-          Actions:
-            - Name: SourceAction
-              ActionTypeId:
-                Category: Source
-                Owner: ThirdParty
-                Version: 1
-                Provider: GitHub
-              OutputArtifacts:
-                - Name: SourceOuput
-              Configuration:
-                Owner: !Ref pGitHubAccount
-                Repo: !Ref pGitHubRepo
-                PollForSourceChanges: 'true'
-                Branch: !Ref pGitHubRepoBranch
-                OAuthToken: !Ref pGitHubToken
-              RunOrder: 1
-        - Name: BuildDeploy
-          Actions:
-            - Name: CodeBuild
-              InputArtifacts:
-                - Name: SourceOuput
-              ActionTypeId:
-                Category: Build
-                Owner: AWS
-                Version: 1
-                Provider: CodeBuild
-              OutputArtifacts:
-                - Name: BuildOutput
-              Configuration:
-                ProjectName:
-                  Ref: rBuildProject
-              RunOrder: 1
-
-  # AWS IAM Role to be used with the AWS CodePipeline defined above
+# AWS IAM Role to be used with the AWS CodePipeline defined below
+# Allows CodePipeline to assume the role, perform appropriate actions
+# (logging, CodeBuild, S3, etc) on associated resources
   rPipelineRole:
     Type: AWS::IAM::Role
     Properties:
@@ -161,48 +107,8 @@ Resources:
                     - '/*'
               Resource: '*'
 
-  # AWS Code Build Project definition
-  rBuildProject:
-    Type: "AWS::CodeBuild::Project"
-    Properties:
-      Name: !Sub '${AWS::StackName}-BUILDPROJECT-${pEnv}'
-      ServiceRole: !Ref rBuildProjectRole
-      BadgeEnabled: 'false'
-      Artifacts:
-        Type: CODEPIPELINE
-      Environment:
-        Type: LINUX_CONTAINER
-        ComputeType: BUILD_GENERAL1_SMALL
-        PrivilegedMode: 'false'
-        Image: aws/codebuild/nodejs:6.3.1
-      Source:
-        Type: CODEPIPELINE
-        BuildSpec: !Sub |
-          version: 0.2
-          phases:
-            build:
-              commands:
-                - echo Build started on `date`
-                - ls -la
-                - npm install
-                - rm -rf .gitignore
-                - zip -r deploy.zip *
-                - aws lambda update-function-code --function-name ${rLambdaFunction} --zip-file fileb://deploy.zip --region ${AWS::Region}
-            post_build:
-              commands:
-                - echo Build completed on `date`
-      TimeoutInMinutes: 10
-      Cache:
-        Type: NO_CACHE
-      Tags:
-        - Key: CFNOwner
-          Value: !Ref pCFNOwnerTag
-        - Key: ENV
-          Value: !Ref pEnv
-        - Key: AppName
-          Value: !Ref pApplicationName
-
   # AWS IAM Role to be used with the AWS CodeBuild Project defined above
+  # to interact with / perform desired functions (logging, s3, lambda update)
   rBuildProjectRole:
     Type: AWS::IAM::Role
     Properties:
@@ -243,36 +149,7 @@ Resources:
               Resource:
                 - !GetAtt rLambdaFunction.Arn
 
-  # AWS Lambda Configuration
-  rLambdaFunction:
-    Type: AWS::Lambda::Function
-    Properties:
-      FunctionName: !Sub '${AWS::StackName}-LAMBDA-${pEnv}'
-      Timeout: 10
-      Runtime: nodejs6.10
-      Handler: index.handler
-      Role: !GetAtt rLambdaFunctionRole.Arn
-      Environment:
-        Variables:
-          ENV: !Ref pEnv
-      Tags:
-        - Key: CFNOwner
-          Value: !Ref pCFNOwnerTag
-        - Key: ENV
-          Value: !Ref pEnv
-        - Key: AppName
-          Value: !Ref pApplicationName
-      Code:
-        ZipFile: !Sub |
-          exports.handler = (event, context, callback) => {
-
-            // TODO implement
-
-            callback(null, 'Hello from Lambda');
-
-          };
-
-  # AWS IAM Role to be used with the AWS Lambda Function defined above
+  # AWS IAM Role to be used with the AWS Lambda Function defined below
   rLambdaFunctionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -296,36 +173,154 @@ Resources:
                 - 'logs:DescribeLogStreams'
               Resource: '*'
 
-# Paramaters that the user will be prompted for when running this template
-# Note that the values from these parameters will be used by the resources above
-Parameters:
-  pGitHubToken:
-    Type: 'String'
-    Description: "Enter the GitHub Token"
-    NoEcho: true
-  pGitHubAccount:
-    Type: 'String'
-    Description: "Enter the GitHub Account Name"
-  pGitHubRepo:
-    Type: 'String'
-    Description: "Enter the GitHub Repo Name"
-  pGitHubRepoBranch:
-    Type: 'String'
-    Default: 'dev'
-    Description: "Enter the Branch you wish to pull from in the GitHub repo"
-  pPipelineBucketName:
-    Type: 'String'
-    Description: "The name of the S3 bucket that will contain the pipeline artifacts"
-  pCFNOwnerTag:
-    Type: 'String'
-    Description: "The owner of this stack (for tagging of resources)"
-  pEnv:
-    Type: 'String'
-    Description: "The environment"
-    AllowedValues:
-      - 'PROD'
-      - 'QA'
-      - 'TEST'
-  pApplicationName:
-    Type: 'String'
-    Description: "The name of the application"
+  # AWS S3 Bucket configuration (must be globally unique and not exist)
+  # This bucket will be used to hold the pipeline artifacts (source, build)
+  rPipelineBucket:
+    Type: "AWS::S3::Bucket"
+    Properties:
+      # Bucket name is pulled from user-provided parameter
+      BucketName: !Ref pPipelineBucketName
+      # Tags populated with paramaters provided above
+      Tags:
+        - Key: CFNOwner
+          Value: !Ref pCFNOwnerTag
+        - Key: ENV
+          Value: !Ref pEnv
+        - Key: AppName
+          Value: !Ref pApplicationName
+
+  # AWS CodePipeline Configuration
+  rPipeline:
+    Type: "AWS::CodePipeline::Pipeline"
+    # Properties for the CodePipeline resource
+    Properties:
+      Name: !Sub '${AWS::StackName}-PIPELINE-${pEnv}'
+      RoleArn: !GetAtt rPipelineRole.Arn
+      ArtifactStore:
+        Type: S3
+        Location:
+          Ref: rPipelineBucket
+      # Define the various Pipeline Stages and Actions
+      
+      Stages:
+      # Source Stage:  Watch GitHub, trigger pipeline on repo change
+        - Name: Source
+          Actions:
+            - Name: SourceAction
+              ActionTypeId:
+                Category: Source
+                Owner: ThirdParty
+                Version: 1
+                Provider: GitHub
+              OutputArtifacts:
+                - Name: SourceOuput
+              # GitHub Repo details provided in parameters above
+              Configuration:
+                Owner: !Ref pGitHubAccount
+                Repo: !Ref pGitHubRepo
+                # Poll GitHub (every 30 seconds) for changes
+                PollForSourceChanges: 'true'
+                Branch: !Ref pGitHubRepoBranch
+                OAuthToken: !Ref pGitHubToken
+              RunOrder: 1
+      # Build Stage:  CodeBuild Action (see further below)  
+        - Name: BuildDeploy
+          Actions:
+            - Name: CodeBuild
+              InputArtifacts:
+                - Name: SourceOuput
+              ActionTypeId:
+                Category: Build
+                Owner: AWS
+                Version: 1
+                Provider: CodeBuild
+              OutputArtifacts:
+                - Name: BuildOutput
+              Configuration:
+                ProjectName:
+                  Ref: rBuildProject
+              RunOrder: 1
+
+  # AWS CodeBuild Project definition (language, build server, buildspec)
+  rBuildProject:
+    Type: "AWS::CodeBuild::Project"
+    Properties:
+      Name: !Sub '${AWS::StackName}-BUILDPROJECT-${pEnv}'
+      ServiceRole: !Ref rBuildProjectRole
+      BadgeEnabled: 'false'
+      Artifacts:
+        Type: CODEPIPELINE
+      Environment:
+        Type: LINUX_CONTAINER
+        ComputeType: BUILD_GENERAL1_SMALL
+        PrivilegedMode: 'false'
+        # Specifying our build server container image
+        # TODO:  Parameterize this for 'selectable' pipeline
+        Image: aws/codebuild/nodejs:6.3.1
+      Source:
+        Type: CODEPIPELINE
+        
+        # Here's the BuildSpec that will be applied via CodeBuild
+        # TODO:  Externalize this to look for buildspec.yml in repo
+        BuildSpec: !Sub |
+          version: 0.2
+          phases:
+            build:
+              commands:
+                - echo Build started on `date`
+                - ls -la
+                - npm install
+                - rm -rf .gitignore
+                - zip -r deploy.zip *
+                - aws lambda update-function-code --function-name ${rLambdaFunction} --zip-file fileb://deploy.zip --region ${AWS::Region}
+            post_build:
+              commands:
+                - echo Build completed on `date`
+      TimeoutInMinutes: 10
+      Cache:
+        Type: NO_CACHE
+      # Tag all the things (from parameter values)
+      Tags:
+        - Key: CFNOwner
+          Value: !Ref pCFNOwnerTag
+        - Key: ENV
+          Value: !Ref pEnv
+        - Key: AppName
+          Value: !Ref pApplicationName
+
+
+
+  # AWS Lambda Configuration
+  # This is the 'target' of our deployment step (final step of buildspec)
+
+  rLambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: !Sub '${AWS::StackName}-LAMBDA-${pEnv}'
+      Timeout: 10
+      Runtime: nodejs6.10
+      Handler: index.handler
+      Role: !GetAtt rLambdaFunctionRole.Arn
+      Environment:
+        Variables:
+          ENV: !Ref pEnv
+      # Tag all the things (from parameter values)
+      Tags:
+        - Key: CFNOwner
+          Value: !Ref pCFNOwnerTag
+        - Key: ENV
+          Value: !Ref pEnv
+        - Key: AppName
+          Value: !Ref pApplicationName
+      Code:
+        ZipFile: !Sub |
+          exports.handler = (event, context, callback) => {
+
+            // TODO implement
+
+            callback(null, 'Hello from Lambda');
+
+          };
+
+
+
