--- a/aws-cfn-lambda-node-pipeline.yml
+++ b/aws-cfn-lambda-node-pipeline.yml
@@ -172,6 +172,12 @@ Resources:
                 - 'logs:PutLogEvents'
                 - 'logs:DescribeLogStreams'
               Resource: '*'
+          Statement:
+            - Sid: "Dynamo Full Access"
+            - Effect: Allow
+              Action:
+                - 'dynamodb:*'
+              Resource: 'arn:aws:dynamodb:us-east-1:912436859212:table/user-info-mehs'    
 
   # AWS S3 Bucket configuration (must be globally unique and not exist)
   # This bucket will be used to hold the pipeline artifacts (source, build)
