--- a/aws-cfn-lambda-node-pipeline.yml
+++ b/aws-cfn-lambda-node-pipeline.yml
@@ -7,8 +7,14 @@ AWSTemplateFormatVersion: 2010-09-09
 #           Michael Hansen
 #           Billy Glenn
 
-# Version 0.30 
+# Version 0.40 
 # Revision Date: 8/21/2018
+
+# The Interface Metadata key provides structure for the U/I
+# as rendered in the AWS Web Console when launching a CloudFormation
+# template.  This allows grouping and ordering of parameters,
+# assigning user-friendly labels and more.
+
 Metadata: 
   AWS::CloudFormation::Interface: 
     ParameterGroups: 
@@ -66,27 +72,33 @@ Parameters:
     Type: 'String'
     Description: "Enter the GitHub Access Token"
     NoEcho: true
+
   # GitHub account or organization that owns the target repository
   pGitHubAccount:
     Type: 'String'
     Description: "Enter the GitHub Account Name"
+
   # Specific GitHub target repository  - do not include .git extension
   pGitHubRepo:
     Type: 'String'
     Description: "Enter the GitHub Repo Name"
+
   # Specify the branch (master, dev, feature, etc) within repo
   pGitHubRepoBranch:
     Type: 'String'
     Default: 'dev'
     Description: "Enter the Branch (dev, master, feature, etc) you wish to pull from the GitHub repo"
+
   # Specify S3 bucket to contain pipeline / build artifacts 
   pPipelineBucketName:
     Type: 'String'
     Description: "The name of the S3 bucket that will contain the pipeline artifacts"
+
   # CorpID of the person who 'owns' the stack and associated resources
   pCFNOwnerTag:
     Type: 'String'
     Description: "Enter CorpID of the owner of this stack (for tagging of resources)"
+
   # Environment specification (appended to tags, etc)
   pEnv:
     Type: 'String'
@@ -96,19 +108,22 @@ Parameters:
       - 'QA'
       - 'TEST'
       - 'DEV'
+
   # Application Name (used in stack / resource names, tags)
   pApplicationName:
     Type: 'String'
     Description: "The name of the application"
+
   # DynamoDB Table name - from Lambda101 Workshop
   pDynamoDbTableArn:
     Type: 'String'
     Description: "DynamoDB Table ARN (from Lambda101 Workshop)"
     Default: "arn:aws:dynamodb:us-east-1:123456789101:table/user-info-mehs"
 
-Resources:
 # The following sections define the various AWS resources,
 # and their specific configurations, created by this template
+
+Resources:
 
 # AWS IAM Role to be used with the AWS CodePipeline defined below
 # Allows CodePipeline to assume the role, perform appropriate actions
