Add FunctionName ENV Var

--- a/aws-cfn-lambda-node-pipeline.yml
+++ b/aws-cfn-lambda-node-pipeline.yml
@@ -378,6 +378,7 @@ Resources:
       Environment:
         Variables:
           ENV: !Ref pEnv
+          FunctionName: !Ref FunctionName
       # Tag all the things (from parameter values)
       Tags:
         - Key: CFNOwner
